devquest test round

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -43,7 +43,9 @@
             <i class="bi bi-person-circle avatar"></i>
 
             <p class="navBarUserName">
-              <span id="userName"></span>
+              <span id="userName">
+                
+              </span>
               <button
                 class="btn m-4"
                 id="sign-out-btn"
